--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     <!-- info box  -->
     <div class="info_box">
         <div class="info_title">
-            <span>some Rules of this Quiz</span>
+            <span>Some Rules of this Quiz</span>
         </div>
 
         <div class="info_list">
-            <div class="info">1.You Will have only <span>15 seconds</span>per each question</div>
+            <div class="info">1.You Will have only <span>15 seconds</span> per each question</div>
             <div class="info">2. Once you select your answer, you can't reselect.</div>
-            <div class="info">3. You can't select </div>
-            <div class="info"></div>
-            <div class="info"></div>
+            <div class="info">3. You can't select any option once time goes off.</div>
+            <div class="info">4. you cant exit from the quiz while you're playing.</div>
+            <div class="info">5. you'll get points on the basis of your correct answers.</div>
         </div>
-
+            <div class="buttons">
+                <button class="quit">Exit Quiz</button>
+                <button class="restart">Continue</button>
+            </div>
     </div>
 
 </body>
