--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
        
         <section>
             <div class="que_text">
-                <span>What does HTML stand for:</span>
+                <!-- <span>What does HTML stand for?:</span> -->
             </div>
             <div class="option_list">
-                <div class="option">
+                <!-- <div class="option">
                     <span>Hyper Text Preprocessor</span>
                     <div class="icon cross"><i class="fas fa-times"></i></div>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="option">
                     <span>Hyper Tool Multi Language</span>
                     <div class="icon cross"><i class="fas fa-times"></i></div>
-                </div>
+                </div> -->
         
             </div>
         </section>
@@ -72,7 +72,7 @@
         <!-- Quiz Box Footer -->
         <footer>
             <div class="total_que">
-                <span> <p>2</p> of <p>5</p>  Questions </span>
+                <!-- <span><p>2</p>of<p>5</p>Questions</span> -->
             </div>
             <button class="next_btn">Next Que</button>
         </footer>
